# hardware-rust-crypto

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml
.github/docker/: fstar-proof.Dockerfile
.github/workflows/: README.md  ci.yml  constant-time.yml  crux-mir.yml  fstar.yml  fuzz.yml  heavy-assurance.yml  kani.yml  miri.yml  mutation.yml  proof-image.yml  proofs-z3.yml  publish.yml  randomness.yml  sanitizers.yml  saw.yml  valgrind.yml
benches/: aes_gcm.rs  aes_gcm_siv.rs  random.rs
crates/hardware-aes-gcm/: Cargo.toml
crates/hardware-aes-gcm/src/: aes.rs  fork.rs  ghash.rs  lib.rs  nonce.rs
crates/hardware-random/: Cargo.toml
crates/hardware-random/src/: aes_ctr.rs  entropy.rs  fork.rs  lib.rs
docs/: asherah-integration.md  assurance.md  benchmarks.md  constant-time.md  design.md  mutation-testing.md  proof-coverage.md  randomness-testing.md  security-audit.md
examples/: assert_hardware.rs  ct_verify.rs  rng_dump.rs  state_size.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gcm_decrypt.rs  gcm_differential.rs  siv_decrypt.rs  siv_differential.rs
proofs/: .gitignore  README.md  field_model.py  prove_aggregation.py  prove_composition.py  prove_composition_inductive.py  prove_ghash_identity.py  prove_ghash_polyval_mapping.py  prove_input_format.py  prove_multiply.py  run_all.sh
proofs/constant-time/: verify.sh
proofs/crux-mir/: README.md  clmul_probe.rs  increment_counter.rs  run.sh
proofs/fstar/: HrcComposition.fst  check.sh
proofs/hax/: README.md  extract.sh
proofs/saw/: README.md  composition.saw  field_bilinearity.saw  run.sh
src/: lib.rs
src/aes_gcm/: aes.rs  fork.rs  ghash.rs  mod.rs  nonce.rs  siv.rs
src/random/: fork.rs  mod.rs
tests/: aes_gcm_interop.rs  aes_gcm_siv_interop.rs  nist_cavp_gcm.rs  openssl_interop.rs  proptest_aead.rs  random.rs  rng_statistical.rs  timing_constant_time.rs  timing_constant_time_siv.rs  wycheproof_aes_gcm.rs  wycheproof_aes_gcm_siv.rs
tests/data/: nist_cavp_aes256_gcm.json
